[gd_scene load_steps=3 format=3 uid="uid://g3mls7ib10qq"]

[ext_resource type="Script" uid="uid://cwlx7g7s8ug5q" path="res://Scripts/ui/gear_description_popup.gd" id="1_2tpgk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_00k4y"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3

[node name="GearDescriptionPopup" type="Panel"]
z_index = 1
custom_minimum_size = Vector2(200, 100)
offset_right = 200.0
offset_bottom = 110.0
theme_override_styles/panel = SubResource("StyleBoxFlat_00k4y")
script = ExtResource("1_2tpgk")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="RarityLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Rarity"

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Name"

[node name="WeightLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Weight"

[node name="ValueRangeLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Damage: "
